@@ -3,18 +3,16 @@ package net.momirealms.craftengine.core.pack.host.impl;
 import com.google.gson.reflect.TypeToken;
 import net.momirealms.craftengine.core.pack.host.*;
 import net.momirealms.craftengine.core.plugin.CraftEngine;
+import net.momirealms.craftengine.core.plugin.config.ConfigKeys;
 import net.momirealms.craftengine.core.plugin.config.ConfigSection;
-import net.momirealms.craftengine.core.plugin.locale.TranslationManager;
+import net.momirealms.craftengine.core.plugin.network.NetWorkUser;
 import net.momirealms.craftengine.core.util.GsonHelper;
 import net.momirealms.craftengine.core.util.HashUtils;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.ProxySelector;
 import java.net.URI;
 import java.net.URLEncoder;
-import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
@@ -29,59 +27,18 @@ public final class GitLabHost implements ResourcePackHost {
     private final String gitlabUrl;
     private final String accessToken;
     private final String projectId;
-    private final ProxySelector proxy;
+    private final Path cacheFilePath;
 
-    private String url;
-    private String sha1;
-    private UUID uuid;
+    private String cachedUrl;
+    private String cachedSha1;
 
-    public GitLabHost(String gitlabUrl, String accessToken, String projectId, ProxySelector proxy) {
-        this.gitlabUrl = gitlabUrl;
+    private GitLabHost(String gitlabUrl, String accessToken, String projectId, Path cacheFilePath) {
+        this.gitlabUrl = gitlabUrl.endsWith("/") ? gitlabUrl.substring(0, gitlabUrl.length() - 1) : gitlabUrl;
         this.accessToken = accessToken;
         this.projectId = projectId;
-        this.proxy = proxy;
+        this.cacheFilePath = cacheFilePath;
+
         this.readCacheFromDisk();
-    }
-
-    public void readCacheFromDisk() {
-        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("gitlab.json");
-        if (!Files.exists(cachePath) || !Files.isRegularFile(cachePath)) return;
-        try (InputStream is = Files.newInputStream(cachePath)) {
-            Map<String, String> cache = GsonHelper.get().fromJson(
-                    new InputStreamReader(is, StandardCharsets.UTF_8),
-                    new TypeToken<Map<String, String>>(){}.getType()
-            );
-            this.url = cache.get("url");
-            this.sha1 = cache.get("sha1");
-            String uuidString = cache.get("uuid");
-            if (uuidString != null && !uuidString.isEmpty()) {
-                this.uuid = UUID.fromString(uuidString);
-            }
-            CraftEngine.instance().logger().info(TranslationManager.instance().plainTranslation("info.host.cache.load", "GitLab"));
-        } catch (Exception e) {
-            CraftEngine.instance().logger().warn(
-                    "[GitLab] Failed to read cache file: " + cachePath, e);
-        }
-    }
-
-    public void saveCacheToDisk() {
-        Map<String, String> cache = new HashMap<>();
-        cache.put("url", this.url);
-        cache.put("sha1", this.sha1);
-        cache.put("uuid", this.uuid != null ? this.uuid.toString() : "");
-        Path cachePath = CraftEngine.instance().dataFolderPath().resolve("cache").resolve("gitlab.json");
-        try {
-            Files.createDirectories(cachePath.getParent());
-            Files.writeString(
-                    cachePath,
-                    GsonHelper.get().toJson(cache),
-                    StandardOpenOption.CREATE,
-                    StandardOpenOption.TRUNCATE_EXISTING
-            );
-        } catch (IOException e) {
-            CraftEngine.instance().logger().warn(
-                    "[GitLab] Failed to save cache: " + e.getMessage());
-        }
     }
 
     @Override
@@ -90,97 +47,129 @@ public final class GitLabHost implements ResourcePackHost {
     }
 
     @Override
-    public CompletableFuture<List<ResourcePackDownloadData>> requestResourcePackDownloadLink(UUID player) {
-        if (url == null) return CompletableFuture.completedFuture(Collections.emptyList());
-        return CompletableFuture.completedFuture(List.of(ResourcePackDownloadData.of(this.url, this.uuid, this.sha1)));
+    public ResourcePackHostType<GitLabHost> type() {
+        return ResourcePackHosts.GITLAB;
+    }
+
+    @SuppressWarnings("DuplicatedCode")
+    @Override
+    public CompletableFuture<List<ResourcePackDownloadData>> requestResourcePackDownloadLink(NetWorkUser user) {
+        if (this.cachedUrl == null || this.cachedSha1 == null) {
+            return CompletableFuture.completedFuture(Collections.emptyList());
+        }
+        UUID uuid = UUID.nameUUIDFromBytes(this.cachedSha1.getBytes(StandardCharsets.UTF_8));
+        return CompletableFuture.completedFuture(List.of(new ResourcePackDownloadData(this.cachedUrl, uuid, this.cachedSha1)));
     }
 
     @Override
     public CompletableFuture<Void> upload(Path resourcePackPath) {
         CompletableFuture<Void> future = new CompletableFuture<>();
+
         CraftEngine.instance().scheduler().executeAsync(() -> {
-            this.sha1 = HashUtils.calculateLocalFileSha1(resourcePackPath);
-            this.uuid = UUID.nameUUIDFromBytes(this.sha1.getBytes(StandardCharsets.UTF_8));
-            try (HttpClient client = HttpClient.newBuilder().proxy(this.proxy).build()) {
-                String boundary = UUID.randomUUID().toString();
-                HttpRequest request = HttpRequest.newBuilder()
+            try {
+                String localSha1 = HashUtils.sha1(resourcePackPath);
+                String boundary = "CraftEngineBoundary" + System.currentTimeMillis();
+
+                HttpRequest request = HttpClientManager.requestBuilder()
                         .uri(URI.create(this.gitlabUrl + "/api/v4/projects/" + this.projectId + "/uploads"))
                         .header("PRIVATE-TOKEN", this.accessToken)
                         .header("Content-Type", "multipart/form-data; boundary=" + boundary)
-                        .POST(buildMultipartBody(resourcePackPath, boundary))
+                        .POST(buildMultipartBodyPublisher(resourcePackPath, boundary))
                         .build();
-                long uploadStart = System.currentTimeMillis();
-                CraftEngine.instance().logger().info(
-                        "[GitLab] Initiating resource pack upload...");
-                client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                        .thenAccept(response -> {
-                            long uploadTime = System.currentTimeMillis() - uploadStart;
-                            CraftEngine.instance().logger().info(
-                                    "[GitLab] Upload request completed in " + uploadTime + "ms");
-                            if (response.statusCode() == 200 || response.statusCode() == 201) {
-                                Map<String, Object> json = GsonHelper.parseJsonToMap(response.body());
-                                if (json.containsKey("full_path")) {
-                                    this.url = this.gitlabUrl + json.get("full_path");
-                                    future.complete(null);
-                                    saveCacheToDisk();
-                                    return;
-                                }
-                            }
-                            CraftEngine.instance().logger().warn("[GitLab] Upload failed: " + response.body());
-                            future.completeExceptionally(new RuntimeException("Upload failed: " + response.body()));
-                        })
+
+                HttpClientManager.sendAsync(request, HttpResponse.BodyHandlers.ofString())
+                        .thenAccept(response -> handleUploadResponse(response, localSha1, future))
                         .exceptionally(ex -> {
-                            CraftEngine.instance().logger().warn(
-                                    "[GitLab] Upload error: " + ex.getMessage());
                             future.completeExceptionally(ex);
                             return null;
                         });
-            } catch (IOException e) {
-                CraftEngine.instance().logger().warn(
-                        "[GitLab] Failed to upload resource pack: " + e.getMessage());
+            } catch (Exception e) {
+                future.completeExceptionally(e);
             }
         });
+
         return future;
     }
 
-    private HttpRequest.BodyPublisher buildMultipartBody(Path filePath, String boundary) throws IOException {
-        List<byte[]> parts = new ArrayList<>();
-        String filePartHeader = "--" + boundary + "\r\n" +
-                "Content-Disposition: form-data; name=\"file\"; filename=\"" + filePath.getFileName() + "\"\r\n" +
-                "Content-Type: application/octet-stream\r\n\r\n";
-        parts.add(filePartHeader.getBytes(StandardCharsets.UTF_8));
+    private void handleUploadResponse(HttpResponse<String> response, String localSha1, CompletableFuture<Void> future) {
+        if (response.statusCode() != 200 && response.statusCode() != 201) {
+            fail(future, "Upload HTTP " + response.statusCode(), response.body());
+            return;
+        }
 
-        parts.add(Files.readAllBytes(filePath));
-        parts.add("\r\n".getBytes(StandardCharsets.UTF_8));
-
-        String endBoundary = "--" + boundary + "--\r\n";
-        parts.add(endBoundary.getBytes(StandardCharsets.UTF_8));
-
-        return HttpRequest.BodyPublishers.ofByteArrays(parts);
+        try {
+            Map<String, Object> json = GsonHelper.parseJsonToMap(response.body());
+            if (json.containsKey("full_path")) {
+                this.cachedUrl = this.gitlabUrl + json.get("full_path");
+                this.cachedSha1 = localSha1;
+                saveCacheToDisk();
+                future.complete(null);
+            } else {
+                fail(future, "Missing full_path in response", response.body());
+            }
+        } catch (Exception e) {
+            future.completeExceptionally(e);
+        }
     }
 
-    @Override
-    public ResourcePackHostType<GitLabHost> type() {
-        return ResourcePackHosts.GITLAB;
+    private HttpRequest.BodyPublisher buildMultipartBodyPublisher(Path filePath, String boundary) throws IOException {
+        String fileName = filePath.getFileName().toString();
+        byte[] start = ("--" + boundary + "\r\n" +
+                "Content-Disposition: form-data; name=\"file\"; filename=\"" + fileName + "\"\r\n" +
+                "Content-Type: application/octet-stream\r\n\r\n").getBytes(StandardCharsets.UTF_8);
+        byte[] end = ("\r\n--" + boundary + "--\r\n").getBytes(StandardCharsets.UTF_8);
+        return HttpRequest.BodyPublishers.ofByteArrays(List.of(
+                start,
+                Files.readAllBytes(filePath),
+                end
+        ));
+    }
+
+    private void fail(CompletableFuture<?> future, String reason, String body) {
+        String msg = "GitLabHost Error: " + reason + (body != null ? " | Body: " + body : "");
+        future.completeExceptionally(new RuntimeException(msg));
+    }
+
+    private void readCacheFromDisk() {
+        if (!Files.exists(this.cacheFilePath)) return;
+        try (InputStreamReader isr = new InputStreamReader(Files.newInputStream(this.cacheFilePath), StandardCharsets.UTF_8)) {
+            Map<String, String> cache = GsonHelper.get().fromJson(isr, new TypeToken<Map<String, String>>(){}.getType());
+            this.cachedUrl = cache.get("url");
+            this.cachedSha1 = cache.get("sha1");
+        } catch (Exception e) {
+            CraftEngine.instance().logger().warn("Failed to load GitLab cache", e);
+        }
+    }
+
+    private void saveCacheToDisk() {
+        try {
+            Files.createDirectories(this.cacheFilePath.getParent());
+            Map<String, String> cache = new HashMap<>();
+            cache.put("url", this.cachedUrl != null ? this.cachedUrl : "");
+            cache.put("sha1", this.cachedSha1 != null ? this.cachedSha1 : "");
+            Files.writeString(this.cacheFilePath, GsonHelper.get().toJson(cache), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+        } catch (IOException e) {
+            CraftEngine.instance().logger().warn("Failed to persist GitLab cache", e);
+        }
     }
 
     private static class Factory implements ResourcePackHostFactory<GitLabHost> {
-        private static final String[] USE_ENVIRONMENT_VARIABLES = new String[] {"use_environment_variables", "use-environment-variables"};
-        private static final String[] GITLAB_URL = new String[] {"gitlab_url", "gitlab-url"};
-        private static final String[] ACCESS_TOKEN = new String[] {"access_token", "access-token"};
-        private static final String[] PROJECT_ID = new String[] {"project_id", "project-id"};
+        private static final String[] USE_ENVIRONMENT_VARIABLES = ConfigKeys.of("use_environment_variables");
+        private static final String[] GITLAB_URL = ConfigKeys.of("gitlab_url");
+        private static final String[] ACCESS_TOKEN = ConfigKeys.of("access_token");
+        private static final String[] PROJECT_ID = ConfigKeys.of("project_id");
+        private static final String[] CACHE_FILE_NAME = ConfigKeys.of("cache_file_name");
 
         @Override
-        public GitLabHost create(ConfigSection section) {
+        public GitLabHost create(String id, ConfigSection section) {
             boolean useEnv = section.getBoolean(USE_ENVIRONMENT_VARIABLES);
             String gitlabUrl = section.getNonEmptyString(GITLAB_URL);
-            if (gitlabUrl.endsWith("/")) {
-                gitlabUrl = gitlabUrl.substring(0, gitlabUrl.length() - 1);
-            }
             String accessToken = useEnv ? getNonNullEnvironmentVariable(section, "CE_GITLAB_ACCESS_TOKEN") : section.getNonEmptyString(ACCESS_TOKEN);
             String projectId = section.getNonEmptyString(PROJECT_ID);
             projectId = URLEncoder.encode(projectId, StandardCharsets.UTF_8).replace("/", "%2F");
-            return new GitLabHost(gitlabUrl, accessToken, projectId, getProxySelector(section.getSection("proxy")));
+            Path cacheFilePath = CraftEngine.instance().dataFolderPath().resolve("cache")
+                    .resolve(section.getValue(CACHE_FILE_NAME, it -> it.getAsNonEmptyString().replace("/", "_"), "gitlab_" + id + ".json"));
+            return new GitLabHost(gitlabUrl, accessToken, projectId, cacheFilePath);
         }
     }
 }
