@@ -7,6 +7,7 @@ import java.util.*;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.function.Supplier;
 
 public final class MiscUtils {
     private MiscUtils() {
@@ -34,6 +35,10 @@ public final class MiscUtils {
     public static int lerpDiscrete(float delta, int start, int end) {
         int i = end - start;
         return start + floor(delta * (float) (i - 1)) + (delta > 0.0F ? 1 : 0);
+    }
+
+    public static double lerpDiscrete(double delta, double start, double end) {
+        return start + delta * (end - start);
     }
 
     public static int murmurHash3Mixer(int value) {
@@ -299,63 +304,11 @@ public final class MiscUtils {
     }
 
     @SuppressWarnings("unchecked")
-    public static Map<String, Object> castToMap(Object obj, boolean allowNull) {
-        if (allowNull && obj == null) {
-            return null;
-        }
-        if (obj instanceof Map<?, ?> map) {
-            return (Map<String, Object>) map;
-        }
-        throw new IllegalArgumentException("Expected Map, got: " + (obj == null ? null : obj.getClass().getSimpleName()));
-    }
-
-    @SuppressWarnings("unchecked")
     public static Map<String, Object> castToMap(Object obj) {
         if (obj instanceof Map<?, ?> map) {
             return (Map<String, Object>) map;
         }
         throw new IllegalArgumentException("Expected Map, got: " + (obj == null ? null : obj.getClass().getSimpleName()));
-    }
-
-    @SuppressWarnings("unchecked")
-    public static List<Map<String, Object>> getAsMapList(Object obj) {
-        if (obj == null) return List.of();
-        if (obj instanceof List<?> list) {
-            return (List<Map<String, Object>>) list;
-        } else if (obj instanceof Map<?, ?>) {
-            return List.of((Map<String, Object>) obj);
-        }
-        throw new IllegalArgumentException("Expected MapList/Map, got: " + obj.getClass().getSimpleName());
-    }
-
-    public static List<String> getAsStringList(Object o) {
-        List<String> list = new ArrayList<>();
-        if (o instanceof List<?>) {
-            for (Object object : (List<?>) o) {
-                list.add(object.toString());
-            }
-        } else if (o instanceof String) {
-            list.add((String) o);
-        } else {
-            if (o != null) {
-                list.add(o.toString());
-            }
-        }
-        return list;
-    }
-
-    public static String[] getAsStringArray(Object o) {
-        if (o instanceof List<?> list) {
-            String[] array = new String[list.size()];
-            for (int i = 0; i < array.length; i++) {
-                array[i] = list.get(i).toString();
-            }
-            return array;
-        } else if (o != null) {
-            return new String[]{o.toString()};
-        } else {
-            return new String[0];
-        }
     }
 
     @SuppressWarnings("unchecked")
@@ -395,6 +348,14 @@ public final class MiscUtils {
     }
 
     public static int growByHalf(int value, int minValue) {
-        return (int) Math.max(Math.min((long) value + (value >> 1), 2147483639L), minValue);
+        return (int) Math.clamp((long) value + (value >> 1), minValue, 2147483639L);
+    }
+
+    public static float toRadians(float degree) {
+        return degree * DEG_TO_RAD;
+    }
+
+    public static <T> T get(Supplier<T> supplier) {
+        return supplier.get();
     }
 }
